<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/cantidad"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dollars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextDolares"
        android:layout_marginLeft="60dp"
        android:text="@string/dollar"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/euros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textEuros"
        android:layout_marginLeft="60dp"
        android:text="@string/euros"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextDolares"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/symbolDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextDolares"
        android:layout_toRightOf="@+id/cantidad"
        android:text="@string/symbolDollar"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/result"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/symbolEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textEuros"
        android:layout_toRightOf="@+id/cantidad"
        android:text="@string/symbolEuro"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textEuros"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/botonconvert" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/botonreset" />

    <Button
        android:id="@+id/buttoneurodollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConvert"
        android:layout_alignTop="@+id/buttonConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/eurodollar" />

</RelativeLayout>